[package]
name = "starknet"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockifier = { workspace = true, features = ["testing"]}
cairo-felt = { workspace = true }
cairo-lang-starknet = { workspace = true }
clap = { workspace = true }

# TODO: perhaps not the best solution to have ethers inside Starknet crate.
# Here for the MVP, to be checked with spaceshard team.
ethers = { version = "2.0.8" }

starknet_api = { workspace = true, features = ["testing"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet-rs-signers = { workspace = true }
starknet-rs-ff = { workspace = true }
starknet-rs-core = { workspace = true }
starknet-types = { workspace = true }
random-number-generator = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
jsonschema = "0.16.0"

[features]
test_utils = []