[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

starknet_api = { workspace = true }
thiserror = { workspace = true }
starknet-in-rust = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0.81", features = ["arbitrary_precision", "preserve_order"] }
starknet-rs-ff = { workspace = true }
cairo-felt = { workspace = true }
num-integer = { version = "0.1.45", default-features = false }
num-bigint = { version = "0.4", features = ["serde"], default-features = false }