[package]
name = "integration"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Integration tests for Starknet Devnet"

[lib]
path = "lib.rs"

[dependencies]
# TODO import starknet-devnet and use it instead of BackgroundDevnet?

[dev-dependencies]
# devnet
starknet-core = { workspace = true, features = ["test_utils"] }
server = { workspace = true, features = ["test_utils"] }

async-trait = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
ethers = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet-rs-accounts = { workspace = true }
starknet-rs-contract = { workspace = true }
starknet-rs-core = { workspace = true }
starknet-rs-providers = { workspace = true }
starknet-rs-signers = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
url = { workspace = true }
usc = { workspace = true }
