[package]
name = "integration"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Integration tests for Starknet Devnet"

[lib]
path = "lib.rs"

[dependencies]
starknet-core = { workspace = true, features = ["test_utils"] }

async-trait = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
listeners = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet-rs-accounts = { package = "starknet-accounts", git = "https://github.com/0xSpaceShard/starknet-rs.git", branch = "rpc-0.9" }
starknet-rs-contract = { package = "starknet-contract", git = "https://github.com/0xSpaceShard/starknet-rs.git", branch = "rpc-0.9" }
starknet-rs-core = { package = "starknet-core", git = "https://github.com/0xSpaceShard/starknet-rs.git", branch = "rpc-0.9" }
starknet-rs-providers = { package = "starknet-providers", git = "https://github.com/0xSpaceShard/starknet-rs.git", branch = "rpc-0.9" }
starknet-rs-signers = { package = "starknet-signers", git = "https://github.com/0xSpaceShard/starknet-rs.git", branch = "rpc-0.9" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
usc = { workspace = true }
